--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -21,3 +21,42 @@ dataSources:
         - event: Register(address,indexed address,uint256,string,uint256,uint256)
           handler: handleRegister
       file: ./src/mapping.ts
+templates:
+  - kind: ethereum/contract
+    name: Moloch
+    network: kovan
+    source:
+      abi: Moloch
+      # startBlock: 16681585
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.3
+      language: wasm/assemblyscript
+      file: ./src/moloch-mapping.ts
+      entities:
+        - Moloch
+        - TokenBalance
+        - Token
+        - Member
+        - Vote
+        - Proposal
+      abis:
+        - name: Moloch
+          file: ./abis/MolochV2.json
+      eventHandlers:
+        - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+          handler: handleSummonComplete
+        - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
+          handler: handleSubmitProposal
+        - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
+          handler: handleSubmitVote
+        - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
+          handler: handleSponsorProposal
+        - event: ProcessProposal(indexed uint256,indexed uint256,bool)
+          handler: handleProcessProposal
+        - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
+          handler: handleProcessGuildKickProposal
+        - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
+          handler: handleProcessWhitelistProposal
+        - event: UpdateDelegateKey(indexed address,address)
+          handler: handleUpdateDelegateKey
