deploys to nets

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -74,8 +74,8 @@ dataSources:
           handler: handleWithdraw
         - event: Ragequit(indexed address,uint256,uint256)
           handler: handleRagequit
-        - event: UpdateDelegateKey(indexed address,address)
-          handler: handleUpdateDelegateKey
+        - event: TokensCollected(indexed address,uint256)
+          handler: handleTokensCollected
       file: ./src/moloch-mapping.ts
 templates:
   - kind: ethereum/contract
@@ -122,5 +122,5 @@ templates:
           handler: handleWithdraw
         - event: Ragequit(indexed address,uint256,uint256)
           handler: handleRagequit
-        - event: UpdateDelegateKey(indexed address,address)
-          handler: handleUpdateDelegateKey
+        - event: TokensCollected(indexed address,uint256)
+          handler: handleTokensCollected
