--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-moloch-v2-factory",
+    "deploy-prod": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-moloch-v2-factory",
     "deploy-kovan": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-moloch-v2-factory-kovan",
     "create-local": "graph create --node http://localhost:8020/ odyssy-automaton/daohaus-moloch-v2-factory",
     "remove-local": "graph remove --node http://localhost:8020/ odyssy-automaton/daohaus-moloch-v2-factory",
