--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -27,100 +27,100 @@ dataSources:
         - event: Delete(address)
           handler: handleDelete
       file: ./src/mapping.ts
-  - kind: ethereum/contract
-    name: Moloch
-    # network: kovan
-    network: mainnet
-    source:
-      # address: "0x57B28E30D6fE5805E895a880f36176C82df582Ee"
-      address: "0x4570b4faf71e23942b8b9f934b47ccedf7540162"
-      abi: Moloch
-      # startBlock: 16845360
-      startBlock: 9484660
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.3
-      language: wasm/assemblyscript
-      entities:
-        - Moloch
-        - TokenBalance
-        - Token
-        - Member
-        - Vote
-        - Proposal
-      abis:
-        - name: Moloch
-          file: ./abis/Moloch.json
-      eventHandlers:
-        - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
-          handler: handleSummonCompleteMCV
-        - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
-          handler: handleSubmitProposal
-        - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
-          handler: handleSubmitVote
-        - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
-          handler: handleSponsorProposal
-        - event: ProcessProposal(indexed uint256,indexed uint256,bool)
-          handler: handleProcessProposal
-        - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
-          handler: handleProcessGuildKickProposal
-        - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
-          handler: handleProcessWhitelistProposal
-        - event: UpdateDelegateKey(indexed address,address)
-          handler: handleUpdateDelegateKey
-        - event: CancelProposal(indexed uint256,address)
-          handler: handleCancelProposal
-        - event: Withdraw(indexed address,address,uint256)
-          handler: handleWithdraw
-        - event: Ragequit(indexed address,uint256,uint256)
-          handler: handleRagequit
-        - event: TokensCollected(indexed address,uint256)
-          handler: handleTokensCollected
-      file: ./src/moloch-mapping.ts
-templates:
-  - kind: ethereum/contract
-    name: MolochTemplate
-    # network: kovan
-    network: mainnet
-    source:
-      abi: Moloch
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.3
-      language: wasm/assemblyscript
-      file: ./src/moloch-mapping.ts
-      entities:
-        - Moloch
-        - TokenBalance
-        - Token
-        - Member
-        - Vote
-        - Proposal
-      abis:
-        - name: Moloch
-          file: ./abis/Moloch.json
-      eventHandlers:
-        - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
-          handler: handleSummonComplete
-        - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
-          handler: handleSubmitProposal
-        - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
-          handler: handleSubmitVote
-        - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
-          handler: handleSponsorProposal
-        - event: ProcessProposal(indexed uint256,indexed uint256,bool)
-          handler: handleProcessProposal
-        - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
-          handler: handleProcessGuildKickProposal
-        - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
-          handler: handleProcessWhitelistProposal
-        - event: UpdateDelegateKey(indexed address,address)
-          handler: handleUpdateDelegateKey
-        - event: CancelProposal(indexed uint256,address)
-          handler: handleCancelProposal
-        - event: Withdraw(indexed address,address,uint256)
-          handler: handleWithdraw
-        - event: Ragequit(indexed address,uint256,uint256)
-          handler: handleRagequit
-        - event: TokensCollected(indexed address,uint256)
-          handler: handleTokensCollected
+#   - kind: ethereum/contract
+#     name: Moloch
+#     # network: kovan
+#     network: mainnet
+#     source:
+#       # address: "0x57B28E30D6fE5805E895a880f36176C82df582Ee"
+#       address: "0x4570b4faf71e23942b8b9f934b47ccedf7540162"
+#       abi: Moloch
+#       # startBlock: 16845360
+#       startBlock: 9484660
+#     mapping:
+#       kind: ethereum/events
+#       apiVersion: 0.0.3
+#       language: wasm/assemblyscript
+#       entities:
+#         - Moloch
+#         - TokenBalance
+#         - Token
+#         - Member
+#         - Vote
+#         - Proposal
+#       abis:
+#         - name: Moloch
+#           file: ./abis/Moloch.json
+#       eventHandlers:
+#         - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+#           handler: handleSummonCompleteMCV
+#         - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
+#           handler: handleSubmitProposal
+#         - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
+#           handler: handleSubmitVote
+#         - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
+#           handler: handleSponsorProposal
+#         - event: ProcessProposal(indexed uint256,indexed uint256,bool)
+#           handler: handleProcessProposal
+#         - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
+#           handler: handleProcessGuildKickProposal
+#         - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
+#           handler: handleProcessWhitelistProposal
+#         - event: UpdateDelegateKey(indexed address,address)
+#           handler: handleUpdateDelegateKey
+#         - event: CancelProposal(indexed uint256,address)
+#           handler: handleCancelProposal
+#         - event: Withdraw(indexed address,address,uint256)
+#           handler: handleWithdraw
+#         - event: Ragequit(indexed address,uint256,uint256)
+#           handler: handleRagequit
+#         - event: TokensCollected(indexed address,uint256)
+#           handler: handleTokensCollected
+#       file: ./src/moloch-mapping.ts
+# templates:
+#   - kind: ethereum/contract
+#     name: MolochTemplate
+#     # network: kovan
+#     network: mainnet
+#     source:
+#       abi: Moloch
+#     mapping:
+#       kind: ethereum/events
+#       apiVersion: 0.0.3
+#       language: wasm/assemblyscript
+#       file: ./src/moloch-mapping.ts
+#       entities:
+#         - Moloch
+#         - TokenBalance
+#         - Token
+#         - Member
+#         - Vote
+#         - Proposal
+#       abis:
+#         - name: Moloch
+#           file: ./abis/Moloch.json
+#       eventHandlers:
+#         - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+#           handler: handleSummonComplete
+#         - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
+#           handler: handleSubmitProposal
+#         - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
+#           handler: handleSubmitVote
+#         - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
+#           handler: handleSponsorProposal
+#         - event: ProcessProposal(indexed uint256,indexed uint256,bool)
+#           handler: handleProcessProposal
+#         - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
+#           handler: handleProcessGuildKickProposal
+#         - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
+#           handler: handleProcessWhitelistProposal
+#         - event: UpdateDelegateKey(indexed address,address)
+#           handler: handleUpdateDelegateKey
+#         - event: CancelProposal(indexed uint256,address)
+#           handler: handleCancelProposal
+#         - event: Withdraw(indexed address,address,uint256)
+#           handler: handleWithdraw
+#         - event: Ragequit(indexed address,uint256,uint256)
+#           handler: handleRagequit
+#         - event: TokensCollected(indexed address,uint256)
+#           handler: handleTokensCollected
