--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -5,13 +5,10 @@ dataSources:
   - kind: ethereum/contract
     name: V1Factory
     network: kovan
-    # network: mainnet
     source:
-      address: "0x0C60Cd59f42093c7489BA68BAA4d7A01f2468153"
-      # address: "0x2840d12d926cc686217bb42b80b662c7d72ee787"
+      address: '0x0C60Cd59f42093c7489BA68BAA4d7A01f2468153'
       abi: V1Factory
       startBlock: 14980875
-      # startBlock: 8625240
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -22,19 +19,16 @@ dataSources:
         - name: V1Factory
           file: ./abis/V1Factory.json
       eventHandlers:
-        - event: Register(address,indexed address,uint256,string,uint256)
+        - event: 'Register(address,indexed address,uint256,string,uint256)'
           handler: handleRegisterV1
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
     network: kovan
-    # network: mainnet
     source:
-      address: "0xB47778d3BcCBf5e39dEC075CA5F185fc20567b1e"
-      # address: "0x1782a13f176e84Be200842Ade79daAA0B09F0418"
+      address: '0xB47778d3BcCBf5e39dEC075CA5F185fc20567b1e'
       abi: V2Factory
       startBlock: 16845360
-      # startBlock: 9484660
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -45,66 +39,17 @@ dataSources:
         - name: V2Factory
           file: ./abis/V2Factory.json
       eventHandlers:
-        - event: Register(uint256,address,indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256,string,uint256)
+        - event: >-
+            Register(uint256,address,indexed
+            address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256,string,uint256)
           handler: handleRegisterV2
         - event: Delete(address)
           handler: handleDeleteV2
       file: ./src/factory-mapping.ts
-#   - kind: ethereum/contract
-#     name: Moloch
-#     # network: kovan
-#     network: mainnet
-#     source:
-#       # address: "0x57B28E30D6fE5805E895a880f36176C82df582Ee"
-#       address: "0x4570b4faf71e23942b8b9f934b47ccedf7540162"
-#       abi: Moloch
-#       # startBlock: 16845360
-#       startBlock: 9484660
-#     mapping:
-#       kind: ethereum/events
-#       apiVersion: 0.0.3
-#       language: wasm/assemblyscript
-#       entities:
-#         - Moloch
-#         - TokenBalance
-#         - Token
-#         - Member
-#         - Vote
-#         - Proposal
-#       abis:
-#         - name: Moloch
-#           file: ./abis/Moloch.json
-#       eventHandlers:
-#         - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
-#           handler: handleSummonCompleteMCV
-#         - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
-#           handler: handleSubmitProposal
-#         - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
-#           handler: handleSubmitVote
-#         - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
-#           handler: handleSponsorProposal
-#         - event: ProcessProposal(indexed uint256,indexed uint256,bool)
-#           handler: handleProcessProposal
-#         - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
-#           handler: handleProcessGuildKickProposal
-#         - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
-#           handler: handleProcessWhitelistProposal
-#         - event: UpdateDelegateKey(indexed address,address)
-#           handler: handleUpdateDelegateKey
-#         - event: CancelProposal(indexed uint256,address)
-#           handler: handleCancelProposal
-#         - event: Withdraw(indexed address,address,uint256)
-#           handler: handleWithdraw
-#         - event: Ragequit(indexed address,uint256,uint256)
-#           handler: handleRagequit
-#         - event: TokensCollected(indexed address,uint256)
-#           handler: handleTokensCollected
-#       file: ./src/moloch-mapping.ts
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
     network: kovan
-    # network: mainnet
     source:
       abi: V1Moloch
     mapping:
@@ -121,63 +66,75 @@ templates:
         - name: V1Moloch
           file: ./abis/V1Moloch.json
       eventHandlers:
-        - event: SummonComplete(indexed address,uint256)
+        - event: 'SummonComplete(indexed address,uint256)'
           handler: handleSummonComplete
-        - event: SubmitProposal(uint256,indexed address,indexed address,indexed address,uint256,uint256)
+        - event: >-
+            SubmitProposal(uint256,indexed address,indexed address,indexed
+            address,uint256,uint256)
           handler: handleSubmitProposal
-        - event: SubmitVote(indexed uint256,indexed address,indexed address,uint8)
+        - event: 'SubmitVote(indexed uint256,indexed address,indexed address,uint8)'
           handler: handleSubmitVote
-        - event: ProcessProposal(indexed uint256,indexed address,indexed address,uint256,uint256,bool)
+        - event: >-
+            ProcessProposal(indexed uint256,indexed address,indexed
+            address,uint256,uint256,bool)
           handler: handleProcessProposal
-        - event: Ragequit(indexed address,uint256)
+        - event: 'Ragequit(indexed address,uint256)'
           handler: handleRagequit
-        - event: Abort(indexed uint256,address)
+        - event: 'Abort(indexed uint256,address)'
           handler: handleAbort
-        - event: UpdateDelegateKey(indexed address,address)
+        - event: 'UpdateDelegateKey(indexed address,address)'
           handler: handleUpdateDelegateKey
-# - kind: ethereum/contract
-#     name: MolochV2Template
-#     network: kovan
-#     # network: mainnet
-#     source:
-#       abi: Moloch
-#     mapping:
-#       kind: ethereum/events
-#       apiVersion: 0.0.3
-#       language: wasm/assemblyscript
-#       file: ./src/V2-mapping.ts
-#       entities:
-#         - Moloch
-#         - TokenBalance
-#         - Token
-#         - Member
-#         - Vote
-#         - Proposal
-#       abis:
-#         - name: V2Moloch
-#           file: ./abis/V2Moloch.json
-#       eventHandlers:
-#         - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
-#           handler: handleSummonComplete
-#         - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
-#           handler: handleSubmitProposal
-#         - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
-#           handler: handleSubmitVote
-#         - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
-#           handler: handleSponsorProposal
-#         - event: ProcessProposal(indexed uint256,indexed uint256,bool)
-#           handler: handleProcessProposal
-#         - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
-#           handler: handleProcessGuildKickProposal
-#         - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
-#           handler: handleProcessWhitelistProposal
-#         - event: UpdateDelegateKey(indexed address,address)
-#           handler: handleUpdateDelegateKey
-#         - event: CancelProposal(indexed uint256,address)
-#           handler: handleCancelProposal
-#         - event: Withdraw(indexed address,address,uint256)
-#           handler: handleWithdraw
-#         - event: Ragequit(indexed address,uint256,uint256)
-#           handler: handleRagequit
-#         - event: TokensCollected(indexed address,uint256)
-#           handler: handleTokensCollected
+  - kind: ethereum/contract
+    name: MolochV2Template
+    network: kovan
+    source:
+      abi: V2Moloch
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.3
+      language: wasm/assemblyscript
+      file: ./src/v2-mapping.ts
+      entities:
+        - Moloch
+        - TokenBalance
+        - Token
+        - Member
+        - Vote
+        - Proposal
+      abis:
+        - name: V2Moloch
+          file: ./abis/V2Moloch.json
+      eventHandlers:
+        - event: >-
+            SummonComplete(indexed
+            address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+          handler: handleSummonComplete
+        - event: >-
+            SubmitProposal(indexed
+            address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed
+            address,indexed address)
+          handler: handleSubmitProposal
+        - event: >-
+            SubmitVote(uint256,indexed uint256,indexed address,indexed
+            address,uint8)
+          handler: handleSubmitVote
+        - event: >-
+            SponsorProposal(indexed address,indexed
+            address,uint256,uint256,uint256)
+          handler: handleSponsorProposal
+        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessProposal
+        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessGuildKickProposal
+        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessWhitelistProposal
+        - event: 'UpdateDelegateKey(indexed address,address)'
+          handler: handleUpdateDelegateKey
+        - event: 'CancelProposal(indexed uint256,address)'
+          handler: handleCancelProposal
+        - event: 'Withdraw(indexed address,address,uint256)'
+          handler: handleWithdraw
+        - event: 'Ragequit(indexed address,uint256,uint256)'
+          handler: handleRagequit
+        - event: 'TokensCollected(indexed address,uint256)'
+          handler: handleTokensCollected
