--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@graphprotocol/graph-cli": "0.17.1",
     "@graphprotocol/graph-ts": "0.17.0",
-    "js-yaml": "^3.13.1"
+    "js-yaml": "^3.13.1",
+    "minimist": "^1.2.5"
   }
 }
