--- a/subgraph-template.yaml
+++ b/subgraph-template.yaml
@@ -50,56 +50,126 @@ dataSources:
         - event: Delete(address)
           handler: handleDeleteV2
       file: ./src/factory-mapping.ts
-#   - kind: ethereum/contract
-#     name: Moloch
-#     # network: kovan
-#     network: mainnet
-#     source:
-#       # address: "0x57B28E30D6fE5805E895a880f36176C82df582Ee"
-#       address: "0x4570b4faf71e23942b8b9f934b47ccedf7540162"
-#       abi: Moloch
-#       # startBlock: 16845360
-#       startBlock: 9484660
-#     mapping:
-#       kind: ethereum/events
-#       apiVersion: 0.0.3
-#       language: wasm/assemblyscript
-#       entities:
-#         - Moloch
-#         - TokenBalance
-#         - Token
-#         - Member
-#         - Vote
-#         - Proposal
-#       abis:
-#         - name: Moloch
-#           file: ./abis/Moloch.json
-#       eventHandlers:
-#         - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
-#           handler: handleSummonCompleteMCV
-#         - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
-#           handler: handleSubmitProposal
-#         - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
-#           handler: handleSubmitVote
-#         - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
-#           handler: handleSponsorProposal
-#         - event: ProcessProposal(indexed uint256,indexed uint256,bool)
-#           handler: handleProcessProposal
-#         - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
-#           handler: handleProcessGuildKickProposal
-#         - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
-#           handler: handleProcessWhitelistProposal
-#         - event: UpdateDelegateKey(indexed address,address)
-#           handler: handleUpdateDelegateKey
-#         - event: CancelProposal(indexed uint256,address)
-#           handler: handleCancelProposal
-#         - event: Withdraw(indexed address,address,uint256)
-#           handler: handleWithdraw
-#         - event: Ragequit(indexed address,uint256,uint256)
-#           handler: handleRagequit
-#         - event: TokensCollected(indexed address,uint256)
-#           handler: handleTokensCollected
-#       file: ./src/v2-mapping.ts
+  - kind: ethereum/contract
+    name: MCV
+    network: mainnet
+    source:
+      address: "0x4570b4faf71e23942b8b9f934b47ccedf7540162"
+      abi: V2Moloch
+      startBlock: 9484660
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.3
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - TokenBalance
+        - Token
+        - Member
+        - Vote
+        - Proposal
+        - Badge
+      abis:
+        - name: V2Moloch
+          file: ./abis/V2Moloch.json
+      eventHandlers:
+        - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+          handler: handleSummonCompleteLegacy
+        - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
+          handler: handleSubmitProposal
+        - event: SubmitVote(uint256,indexed uint256,indexed address,indexed address,uint8)
+          handler: handleSubmitVote
+        - event: SponsorProposal(indexed address,indexed address,uint256,uint256,uint256)
+          handler: handleSponsorProposal
+        - event: ProcessProposal(indexed uint256,indexed uint256,bool)
+          handler: handleProcessProposal
+        - event: ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)
+          handler: handleProcessGuildKickProposal
+        - event: ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)
+          handler: handleProcessWhitelistProposal
+        - event: UpdateDelegateKey(indexed address,address)
+          handler: handleUpdateDelegateKey
+        - event: CancelProposal(indexed uint256,address)
+          handler: handleCancelProposal
+        - event: Withdraw(indexed address,address,uint256)
+          handler: handleWithdraw
+        - event: Ragequit(indexed address,uint256,uint256)
+          handler: handleRagequit
+        - event: TokensCollected(indexed address,uint256)
+          handler: handleTokensCollected
+      file: ./src/v2-mapping.ts
+  - kind: ethereum/contract
+    name: MolochDAO
+    network: mainnet
+    source:
+      address: "0x1fd169a4f5c59acf79d0fd5d91d1201ef1bce9f1"
+      abi: V1Moloch
+      startBlock: 7218560
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.3
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - Member
+        - Vote
+        - Proposal
+        - Badge
+      abis:
+        - name: V1Moloch
+          file: ./abis/V1Moloch.json
+      eventHandlers:
+        - event: SummonComplete(indexed address,uint256)
+          handler: handleSummonCompleteLegacy
+        - event: SubmitProposal(uint256,indexed address,indexed address,indexed address,uint256,uint256)
+          handler: handleSubmitProposal
+        - event: SubmitVote(indexed uint256,indexed address,indexed address,uint8)
+          handler: handleSubmitVote
+        - event: ProcessProposal(indexed uint256,indexed address,indexed address,uint256,uint256,bool)
+          handler: handleProcessProposal
+        - event: Ragequit(indexed address,uint256)
+          handler: handleRagequit
+        - event: Abort(indexed uint256,address)
+          handler: handleAbort
+        - event: UpdateDelegateKey(indexed address,address)
+          handler: handleUpdateDelegateKey
+      file: ./src/v1-mapping.ts
+  - kind: ethereum/contract
+    name: MCDAO
+    network: mainnet
+    source:
+      address: "0x0372f3696fa7dc99801f435fd6737e57818239f2"
+      abi: V1Moloch
+      startBlock: 7901580
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.3
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - Member
+        - Vote
+        - Proposal
+        - Badge
+      abis:
+        - name: V1Moloch
+          file: ./abis/V1Moloch.json
+      eventHandlers:
+        - event: SummonComplete(indexed address,uint256)
+          handler: handleSummonCompleteLegacy
+        - event: SubmitProposal(uint256,indexed address,indexed address,indexed address,uint256,uint256)
+          handler: handleSubmitProposal
+        - event: SubmitVote(indexed uint256,indexed address,indexed address,uint8)
+          handler: handleSubmitVote
+        - event: ProcessProposal(indexed uint256,indexed address,indexed address,uint256,uint256,bool)
+          handler: handleProcessProposal
+        - event: Ragequit(indexed address,uint256)
+          handler: handleRagequit
+        - event: Abort(indexed uint256,address)
+          handler: handleAbort
+        - event: UpdateDelegateKey(indexed address,address)
+          handler: handleUpdateDelegateKey
+      file: ./src/v1-mapping.ts
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
@@ -117,6 +187,7 @@ templates:
         - Member
         - Vote
         - Proposal
+        - Badge
       abis:
         - name: V1Moloch
           file: ./abis/V1Moloch.json
@@ -153,6 +224,7 @@ templates:
         - Member
         - Vote
         - Proposal
+        - Badge
       abis:
         - name: V2Moloch
           file: ./abis/V2Moloch.json
