--- a/subgraph-template.yaml
+++ b/subgraph-template.yaml
@@ -23,6 +23,12 @@ dataSources:
           file: ./abis/V1Factory.json
         - name: V1Moloch
           file: ./abis/V1Moloch.json
+        - name: Guildbank
+          file: ./abis/Guildbank.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
       eventHandlers:
         - event: "Register(address,indexed address,uint256,string,uint256)"
           handler: handleRegisterV1
@@ -46,6 +52,10 @@ dataSources:
       abis:
         - name: V2Factory
           file: ./abis/V2Factory.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
       eventHandlers:
         - event: Register(uint256,address,indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256,string,uint256)
           handler: handleRegisterV2
@@ -74,6 +84,10 @@ dataSources:
       abis:
         - name: V2Moloch
           file: ./abis/V2Moloch.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
       eventHandlers:
         - event: SummonComplete(indexed address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
           handler: handleSummonCompleteLegacy
@@ -120,6 +134,12 @@ dataSources:
       abis:
         - name: V1Moloch
           file: ./abis/V1Moloch.json
+        - name: Guildbank
+          file: ./abis/Guildbank.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
       eventHandlers:
         - event: SummonComplete(indexed address,uint256)
           handler: handleSummonCompleteLegacy
@@ -156,6 +176,12 @@ dataSources:
       abis:
         - name: V1Moloch
           file: ./abis/V1Moloch.json
+        - name: Guildbank
+          file: ./abis/Guildbank.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
       eventHandlers:
         - event: SummonComplete(indexed address,uint256)
           handler: handleSummonCompleteLegacy
@@ -193,6 +219,12 @@ templates:
       abis:
         - name: V1Moloch
           file: ./abis/V1Moloch.json
+        - name: Guildbank
+          file: ./abis/Guildbank.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
       eventHandlers:
         - event: SummonComplete(indexed address,uint256)
           handler: handleSummonComplete
@@ -230,6 +262,10 @@ templates:
       abis:
         - name: V2Moloch
           file: ./abis/V2Moloch.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
       eventHandlers:
         - event: SubmitProposal(indexed address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed address,indexed address)
           handler: handleSubmitProposal
