--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "deploy-xdai": "node scripts/deploy-prep.js xdai && graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ odyssy-automaton/daohaus-xdai",
     "create-local": "graph create --node http://localhost:8020/ odyssy-automaton/daohaus",
     "remove-local": "graph remove --node http://localhost:8020/ odyssy-automaton/daohaus",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 odyssy-automaton/daohaus"
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 odyssy-automaton/daohaus",
+    "create-local-idchain": "graph create --node http://localhost:8020/ odyssy-automaton/daohaus-idchain",
+    "remove-local-idchain": "graph remove --node http://localhost:8020/ odyssy-automaton/daohaus",
+    "deploy-local-idchain": "node scripts/deploy-prep.js idchain && graph deploy --node http://localhost:8020/ --ipfs https://api.thegraph.com/ipfs/  odyssy-automaton/daohaus-idchain"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.17.1",
