--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: V1Factory
-    network: kovan
+    network: idchain
     source:
-      address: '0x0C60Cd59f42093c7489BA68BAA4d7A01f2468153'
+      address: '0xb29f7eEc3d6d3B614fd458094f7e2Ebb3488E12D'
       abi: V1Factory
-      startBlock: 14980875
+      startBlock: 2199947
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -32,11 +32,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
-    network: kovan
+    network: idchain
     source:
-      address: '0xB47778d3BcCBf5e39dEC075CA5F185fc20567b1e'
+      address: '0xF42aFC058B7b6f80729e43021404549F69875652'
       abi: V2Factory
-      startBlock: 16845360
+      startBlock: 2200328
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -61,7 +61,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
-    network: kovan
+    network: idchain
     source:
       abi: V1Moloch
     mapping:
@@ -105,7 +105,7 @@ templates:
           handler: handleUpdateDelegateKey
   - kind: ethereum/contract
     name: MolochV2Template
-    network: kovan
+    network: idchain
     source:
       abi: V2Moloch
     mapping:
