--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: V1Factory
-    network: mainnet
+    network: kovan
     source:
-      address: '0x2840d12d926cc686217bb42b80b662c7d72ee787'
+      address: '0x0C60Cd59f42093c7489BA68BAA4d7A01f2468153'
       abi: V1Factory
-      startBlock: 8625240
+      startBlock: 14980875
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -32,11 +32,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
-    network: mainnet
+    network: kovan
     source:
-      address: '0x1782a13f176e84Be200842Ade79daAA0B09F0418'
+      address: '0xB47778d3BcCBf5e39dEC075CA5F185fc20567b1e'
       abi: V2Factory
-      startBlock: 9484660
+      startBlock: 16845360
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -58,37 +58,10 @@ dataSources:
         - event: Delete(address)
           handler: handleDeleteV2
       file: ./src/factory-mapping.ts
-  - kind: ethereum/contract
-    name: MolochDAO
-    network: mainnet
-    source:
-      address: '0x1fd169a4f5c59acf79d0fd5d91d1201ef1bce9f1'
-      abi: V1Moloch
-      startBlock: 7218560
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.3
-      language: wasm/assemblyscript
-      entities:
-        - Moloch
-        - Member
-      abis:
-        - name: V1Moloch
-          file: ./abis/V1Moloch.json
-        - name: Guildbank
-          file: ./abis/Guildbank.json
-        - name: Erc20
-          file: ./abis/Erc20.json
-        - name: Erc20Bytes32
-          file: ./abis/Erc20Bytes32.json
-      eventHandlers:
-        - event: 'SummonComplete(indexed address,uint256)'
-          handler: handleLegacyRegistration
-      file: ./src/legacy-mapping.ts
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
-    network: mainnet
+    network: kovan
     source:
       abi: V1Moloch
     mapping:
@@ -132,7 +105,7 @@ templates:
           handler: handleUpdateDelegateKey
   - kind: ethereum/contract
     name: MolochV2Template
-    network: mainnet
+    network: kovan
     source:
       abi: V2Moloch
     mapping:
