--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -59,32 +59,34 @@ dataSources:
           handler: handleDeleteV2
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
-    name: MolochDAO
+    name: V21Factory
     network: kovan
     source:
-      address: '0x1fd169a4f5c59acf79d0fd5d91d1201ef1bce9f1'
-      abi: V1Moloch
-      startBlock: 7218560
+      address: '0x2e08D4813bd59fE4A37B742A4D132E5b4Fd04200'
+      abi: V21Factory
+      startBlock: 16845360
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
       language: wasm/assemblyscript
       entities:
+        - Register
         - Moloch
-        - Member
       abis:
-        - name: V1Moloch
-          file: ./abis/V1Moloch.json
-        - name: Guildbank
-          file: ./abis/Guildbank.json
+        - name: V21Factory
+          file: ./abis/V21Factory.json
         - name: Erc20
           file: ./abis/Erc20.json
         - name: Erc20Bytes32
           file: ./abis/Erc20Bytes32.json
       eventHandlers:
-        - event: 'SummonComplete(indexed address,uint256)'
-          handler: handleSummonCompleteMoloch
-      file: ./src/legacy-mapping.ts
+        - event: >-
+            SummonComplete(indexed
+            address,address[],address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256[])
+          handler: handleSummonV21
+        - event: 'Register(uint256,address,string,string,uint256)'
+          handler: handleRegisterV21
+      file: ./src/factory-mapping.ts
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
