--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -59,6 +59,34 @@ dataSources:
           handler: handleDeleteV2
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
+    name: V21Factory
+    network: kovan
+    source:
+      address: '0xEf9C21d353B4182Bc088CB857eB7a32aF915e0Fd'
+      abi: V21Factory
+      startBlock: 22153522
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.3
+      language: wasm/assemblyscript
+      entities:
+        - Register
+      abis:
+        - name: V21Factory
+          file: ./abis/V21Factory.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: >-
+            SummonComplete(indexed
+            address,address[],address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256,uint256[])
+          handler: handleSummonV21
+        - event: 'Register(uint256,address,string,string,uint256)'
+          handler: handleRegisterV21
+      file: ./src/factory-mapping.ts
+  - kind: ethereum/contract
     name: MinionFactory
     network: kovan
     source:
@@ -158,6 +186,61 @@ templates:
             SummonComplete(indexed
             address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
           handler: handleSummonComplete
+        - event: >-
+            SubmitProposal(indexed
+            address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed
+            address,indexed address)
+          handler: handleSubmitProposal
+        - event: >-
+            SubmitVote(uint256,indexed uint256,indexed address,indexed
+            address,uint8)
+          handler: handleSubmitVote
+        - event: >-
+            SponsorProposal(indexed address,indexed
+            address,uint256,uint256,uint256)
+          handler: handleSponsorProposal
+        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessProposal
+        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessGuildKickProposal
+        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessWhitelistProposal
+        - event: 'UpdateDelegateKey(indexed address,address)'
+          handler: handleUpdateDelegateKey
+        - event: 'CancelProposal(indexed uint256,address)'
+          handler: handleCancelProposal
+        - event: 'Withdraw(indexed address,address,uint256)'
+          handler: handleWithdraw
+        - event: 'Ragequit(indexed address,uint256,uint256)'
+          handler: handleRagequit
+        - event: 'TokensCollected(indexed address,uint256)'
+          handler: handleTokensCollected
+  - kind: ethereum/contract
+    name: MolochV21Template
+    network: kovan
+    source:
+      abi: V21Moloch
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.3
+      language: wasm/assemblyscript
+      file: ./src/v2-mapping.ts
+      entities:
+        - Moloch
+        - TokenBalance
+        - Token
+        - Member
+        - Vote
+        - Proposal
+        - Badge
+      abis:
+        - name: V21Moloch
+          file: ./abis/V21Moloch.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
         - event: >-
             SubmitProposal(indexed
             address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed
